Resolve "Move data things to data service and have correct interfaces"