@@ -1,23 +1,17 @@
 package at.tuwien.endpoints;
 
 import at.tuwien.api.amqp.ExchangeDto;
+import at.tuwien.api.auth.LoginRequestDto;
 import at.tuwien.api.database.*;
 import at.tuwien.api.error.ApiErrorDto;
 import at.tuwien.config.RabbitConfig;
-import at.tuwien.config.S3Config;
 import at.tuwien.entities.database.Database;
 import at.tuwien.entities.database.DatabaseAccess;
 import at.tuwien.entities.user.User;
 import at.tuwien.exception.*;
 import at.tuwien.mapper.DatabaseMapper;
 import at.tuwien.service.*;
-import at.tuwien.utils.PrincipalUtil;
-import at.tuwien.utils.UserUtil;
 import io.micrometer.observation.annotation.Observed;
-import io.minio.GetObjectArgs;
-import io.minio.GetObjectResponse;
-import io.minio.MinioClient;
-import io.minio.errors.*;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.media.ArraySchema;
 import io.swagger.v3.oas.annotations.media.Content;
@@ -31,54 +25,49 @@ import lombok.extern.log4j.Log4j2;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.core.Authentication;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
-import java.io.IOException;
-import java.security.InvalidKeyException;
-import java.security.NoSuchAlgorithmException;
 import java.security.Principal;
+import java.util.LinkedList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Log4j2
 @RestController
 @CrossOrigin(origins = "*")
-@RequestMapping(path = "/api/database",
-        consumes = MediaType.ALL_VALUE,
-        produces = MediaType.APPLICATION_JSON_VALUE)
+@RequestMapping(path = "/api/database")
 public class DatabaseEndpoint {
 
     private final UserService userService;
     private final RabbitConfig rabbitConfig;
     private final AccessService accessService;
+    private final BrokerService messageQueueService;
     private final DatabaseMapper databaseMapper;
     private final StorageService storageService;
     private final DatabaseService databaseService;
-    private final QueryStoreService queryStoreService;
-    private final MessageQueueService messageQueueService;
+    private final AuthenticationService authenticationService;
 
     @Autowired
-    public DatabaseEndpoint(DatabaseMapper databaseMapper, UserService userService, RabbitConfig rabbitConfig,
-                            StorageService storageService, DatabaseService databaseService,
-                            QueryStoreService queryStoreService, AccessService accessService,
-                            MessageQueueService messageQueueService) {
+    public DatabaseEndpoint(UserService userService, RabbitConfig rabbitConfig, AccessService accessService,
+                            BrokerService messageQueueService, DatabaseMapper databaseMapper,
+                            StorageService storageService, DatabaseService databaseService, AuthenticationService authenticationService) {
         this.userService = userService;
         this.rabbitConfig = rabbitConfig;
-        this.storageService = storageService;
         this.accessService = accessService;
-        this.databaseMapper = databaseMapper;
-        this.databaseService = databaseService;
-        this.queryStoreService = queryStoreService;
         this.messageQueueService = messageQueueService;
+        this.databaseMapper = databaseMapper;
+        this.storageService = storageService;
+        this.databaseService = databaseService;
+        this.authenticationService = authenticationService;
     }
 
     @RequestMapping(method = {RequestMethod.GET, RequestMethod.HEAD})
     @Transactional(readOnly = true)
-    @Observed(name = "dbr_database_findall")
+    @Observed(name = "dbrepo_metadata_database_findall")
     @Operation(summary = "List databases")
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200",
@@ -86,30 +75,23 @@ public class DatabaseEndpoint {
                     content = {@Content(
                             mediaType = "application/json",
                             array = @ArraySchema(schema = @Schema(implementation = DatabaseDto.class)))}),
-            @ApiResponse(responseCode = "404",
-                    description = "User not found",
-                    content = {@Content(
-                            mediaType = "application/json",
-                            schema = @Schema(implementation = ApiErrorDto.class))}),
     })
-    public ResponseEntity<List<DatabaseDto>> list(@NotNull Principal principal,
-                                                  @RequestParam(required = false) String filter)
-            throws UserNotFoundException {
-        log.debug("endpoint list databases, filter={}, {}", filter, PrincipalUtil.formatForDebug(principal));
-        final List<DatabaseDto> dtos;
-        if (principal != null && filter != null) {
-            final User user = userService.findByUsername(principal.getName());
-            dtos = databaseService.findAccess(user.getId())
-                    .stream()
-                    .map(databaseMapper::databaseToDatabaseDto)
-                    .collect(Collectors.toList());
+    public ResponseEntity<List<DatabaseDto>> list(@RequestParam(name = "internal_name", required = false) String internalName) {
+        log.debug("endpoint list databases, internalName={}", internalName);
+        List<DatabaseDto> dtos = new LinkedList<>();
+        if (internalName != null) {
+            try {
+                dtos = List.of(databaseMapper.databaseToDatabaseDto(databaseService.findByInternalName(internalName)));
+            } catch (DatabaseNotFoundException e) {
+                /* ignore */
+            }
         } else {
             dtos = databaseService.findAll()
                     .stream()
                     .map(databaseMapper::databaseToDatabaseDto)
-                    .collect(Collectors.toList());
+                    .toList();
         }
-        log.trace("list databases resulted in databases {}", dtos);
+        log.trace("list databases resulted in {} database(s)", dtos.size());
         final HttpHeaders headers = new HttpHeaders();
         headers.set("X-Count", "" + dtos.size());
         headers.set("Access-Control-Expose-Headers", "X-Count");
@@ -121,7 +103,7 @@ public class DatabaseEndpoint {
     @PostMapping
     @Transactional(rollbackFor = Exception.class)
     @PreAuthorize("hasAuthority('create-database')")
-    @Observed(name = "dbr_database_create")
+    @Observed(name = "dbrepo_metadata_database_create")
     @Operation(summary = "Create database", security = {@SecurityRequirement(name = "bearerAuth"), @SecurityRequirement(name = "basicAuth")})
     @ApiResponses(value = {
             @ApiResponse(responseCode = "201",
@@ -155,28 +137,22 @@ public class DatabaseEndpoint {
                             mediaType = "application/json",
                             schema = @Schema(implementation = ApiErrorDto.class))}),
     })
-    public ResponseEntity<DatabaseDto> create(@Valid @RequestBody DatabaseCreateDto createDto,
-                                              @NotNull Principal principal)
-            throws ContainerNotFoundException, DatabaseMalformedException, UserNotFoundException,
-            DatabaseNotFoundException, DatabaseConnectionException, QueryMalformedException, NotAllowedException,
-            QueryStoreException {
-        log.debug("endpoint create database, createDto={}, {}", createDto, PrincipalUtil.formatForDebug(principal));
+    public ResponseEntity<DatabaseDto> create(@Valid @RequestBody DatabaseCreateDto data,
+                                              @NotNull Principal principal) throws ServiceException,
+            ServiceConnectionException, UserNotFoundException, DatabaseNotFoundException, ContainerNotFoundException,
+            SearchServiceException, SearchServiceConnectionException {
+        log.debug("endpoint create database, data.name={}", data.getName());
         final User user = userService.findByUsername(principal.getName());
-        final Database database = databaseService.create(createDto, principal);
-        queryStoreService.create(database.getId(), principal);
-        accessService.create(database.getId(), user.getId(), DatabaseGiveAccessDto.builder()
-                .type(AccessTypeDto.WRITE_ALL)
-                .build());
+        final Database database = databaseService.create(data, user);
         final DatabaseDto dto = databaseMapper.databaseToDatabaseDto(database);
-        log.trace("create database resulted in database {}", dto);
         return ResponseEntity.status(HttpStatus.CREATED)
                 .body(dto);
     }
 
-    @PutMapping("/{id}/visibility")
+    @PutMapping("/{databaseId}/visibility")
     @Transactional
     @PreAuthorize("hasAuthority('modify-database-visibility')")
-    @Observed(name = "dbr_database_visibility")
+    @Observed(name = "dbrepo_metadata_database_visibility")
     @Operation(summary = "Update database visibility", security = {@SecurityRequirement(name = "bearerAuth"), @SecurityRequirement(name = "basicAuth")})
     @ApiResponses(value = {
             @ApiResponse(responseCode = "202",
@@ -195,26 +171,25 @@ public class DatabaseEndpoint {
                             mediaType = "application/json",
                             schema = @Schema(implementation = ApiErrorDto.class))}),
     })
-    public ResponseEntity<DatabaseDto> visibility(@NotNull @PathVariable Long id,
+    public ResponseEntity<DatabaseDto> visibility(@NotNull @PathVariable("databaseId") Long databaseId,
                                                   @Valid @RequestBody DatabaseModifyVisibilityDto data,
                                                   @NotNull Principal principal) throws DatabaseNotFoundException,
-            NotAllowedException {
-        log.debug("endpoint modify database visibility, id={}, data={}, {}", id, data, PrincipalUtil.formatForDebug(principal));
-        final Database database = databaseService.findById(id);
-        if (!database.getOwnedBy().equals(UserUtil.getId(principal))) {
+            NotAllowedException, SearchServiceException, SearchServiceConnectionException {
+        log.debug("endpoint modify database visibility, databaseId={}, data={}", databaseId, data);
+        final Database database = databaseService.findById(databaseId);
+        if (!database.getOwner().equals(principal)) {
             log.error("Failed to modify database visibility: not owner");
             throw new NotAllowedException("Failed to modify database visibility: not owner");
         }
-        final DatabaseDto dto = databaseMapper.databaseToDatabaseDto(databaseService.visibility(id, data));
-        log.trace("update database resulted in database {}", dto);
+        final DatabaseDto dto = databaseMapper.databaseToDatabaseDto(databaseService.modifyVisibility(database, data));
         return ResponseEntity.accepted()
                 .body(dto);
     }
 
-    @PutMapping("/{id}/owner")
+    @PutMapping("/{databaseId}/owner")
     @Transactional
     @PreAuthorize("hasAuthority('modify-database-owner')")
-    @Observed(name = "dbr_database_transfer")
+    @Observed(name = "dbrepo_metadata_database_transfer")
     @Operation(summary = "Update database owner", security = {@SecurityRequirement(name = "bearerAuth"), @SecurityRequirement(name = "basicAuth")})
     @ApiResponses(value = {
             @ApiResponse(responseCode = "202",
@@ -233,27 +208,28 @@ public class DatabaseEndpoint {
                             mediaType = "application/json",
                             schema = @Schema(implementation = ApiErrorDto.class))}),
     })
-    public ResponseEntity<DatabaseDto> transfer(@NotNull @PathVariable Long id,
-                                                @Valid @RequestBody DatabaseTransferDto transferDto,
-                                                @NotNull Principal principal) throws DatabaseNotFoundException,
-            UserNotFoundException, NotAllowedException {
-        log.debug("endpoint transfer database, id={}, transferDto.id={}, {}", id, transferDto.getId(), PrincipalUtil.formatForDebug(principal));
-        final Database database = databaseService.findById(id);
+    public ResponseEntity<DatabaseDto> transfer(@NotNull @PathVariable("databaseId") Long databaseId,
+                                                @Valid @RequestBody DatabaseTransferDto data,
+                                                @NotNull Principal principal) throws NotAllowedException,
+            ServiceException, ServiceConnectionException, DatabaseNotFoundException, UserNotFoundException,
+            SearchServiceException, SearchServiceConnectionException {
+        log.debug("endpoint transfer database, databaseId={}, transferDto.id={}", databaseId, data.getId());
+        final Database database = databaseService.findById(databaseId);
         final User user = userService.findByUsername(principal.getName());
-        if (!database.getOwnedBy().equals(user.getId())) {
+        final User newOwner = userService.findById(data.getId());
+        if (!database.getOwner().equals(user)) {
             log.error("Failed to transfer database: not owner");
             throw new NotAllowedException("Failed to transfer database: not owner");
         }
-        final DatabaseDto dto = databaseMapper.databaseToDatabaseDto(databaseService.transfer(id, transferDto));
-        log.trace("update database resulted in database {}", dto);
+        final DatabaseDto dto = databaseMapper.databaseToDatabaseDto(databaseService.modifyOwner(database, newOwner));
         return ResponseEntity.accepted()
                 .body(dto);
     }
 
-    @PutMapping("/{id}/image")
+    @PutMapping("/{databaseId}/image")
     @Transactional
     @PreAuthorize("hasAuthority('modify-database-image')")
-    @Observed(name = "dbr_database_image")
+    @Observed(name = "dbrepo_metadata_database_image")
     @Operation(summary = "Update database image", security = {@SecurityRequirement(name = "bearerAuth"), @SecurityRequirement(name = "basicAuth")})
     @ApiResponses(value = {
             @ApiResponse(responseCode = "202",
@@ -277,31 +253,31 @@ public class DatabaseEndpoint {
                             mediaType = "application/json",
                             schema = @Schema(implementation = ApiErrorDto.class))}),
     })
-    public ResponseEntity<DatabaseDto> modifyImage(@NotNull @PathVariable Long id,
-                                                   @Valid @RequestBody DatabaseModifyImageDto imageDto,
-                                                   @NotNull Principal principal) throws DatabaseNotFoundException,
-            UserNotFoundException, NotAllowedException, FileStorageException {
-        log.debug("endpoint modify database image, id={}, imageDto={}, {}", id, imageDto, PrincipalUtil.formatForDebug(principal));
-        final Database database = databaseService.findById(id);
+    public ResponseEntity<DatabaseDto> modifyImage(@NotNull @PathVariable("databaseId") Long databaseId,
+                                                   @Valid @RequestBody DatabaseModifyImageDto data,
+                                                   @NotNull Principal principal) throws NotAllowedException,
+            DatabaseNotFoundException, UserNotFoundException, SearchServiceException, SearchServiceConnectionException,
+            StorageUnavailableException, StorageNotFoundException {
+        log.debug("endpoint modify database image, databaseId={}, data.key={}", databaseId, data.getKey());
+        final Database database = databaseService.findById(databaseId);
         final User user = userService.findByUsername(principal.getName());
-        if (!database.getOwnedBy().equals(user.getId())) {
+        if (!database.getOwner().equals(user)) {
             log.error("Failed to update database image: not owner");
             throw new NotAllowedException("Failed to update database image: not owner");
         }
         final DatabaseDto dto;
         byte[] image = null;
-        if (imageDto.getKey() != null) {
-            image = storageService.getBytes(imageDto.getKey());
+        if (data.getKey() != null) {
+            image = storageService.getBytes(data.getKey());
         }
-        dto = databaseMapper.databaseToDatabaseDto(databaseService.modifyImage(id, image));
-        log.trace("update database resulted in database {}", dto);
+        dto = databaseMapper.databaseToDatabaseDto(databaseService.modifyImage(database, image));
         return ResponseEntity.accepted()
                 .body(dto);
     }
 
-    @GetMapping("/{id}")
+    @GetMapping("/{databaseId}")
     @Transactional(readOnly = true)
-    @Observed(name = "dbr_database_find")
+    @Observed(name = "dbrepo_metadata_database_find")
     @Operation(summary = "Find some database", security = {@SecurityRequirement(name = "bearerAuth"), @SecurityRequirement(name = "basicAuth")})
     @ApiResponses(value = {
             @ApiResponse(responseCode = "200",
@@ -320,27 +296,36 @@ public class DatabaseEndpoint {
                             mediaType = "application/json",
                             schema = @Schema(implementation = ApiErrorDto.class))}),
     })
-    public ResponseEntity<DatabaseDto> findById(@NotNull @PathVariable Long id, Principal principal)
-            throws DatabaseNotFoundException, ExchangeNotFoundException, BrokerRemoteException {
-        log.debug("endpoint find database, id={}, {}", id, PrincipalUtil.formatForDebug(principal));
-        final Database database = databaseService.findById(id);
+    public ResponseEntity<DatabaseDto> findById(@NotNull @PathVariable("databaseId") Long databaseId,
+                                                Principal principal) throws ServiceException,
+            ServiceConnectionException, DatabaseNotFoundException, ExchangeNotFoundException {
+        log.debug("endpoint find database, databaseId={}", databaseId);
+        final Database database = databaseService.findById(databaseId);
         final DatabaseDto dto = databaseMapper.databaseToDatabaseDto(database);
-        if (principal != null && database.getOwnedBy().equals(UserUtil.getId(principal))) {
+        if (database.getOwner().equals(principal)) {
             log.debug("current logged-in user is also the owner: additionally load access list");
             /* only owner sees the access rights */
-            final List<DatabaseAccess> accesses = accessService.list(id);
+            final List<DatabaseAccess> accesses = accessService.list(database);
             dto.setAccesses(accesses.stream()
                     .map(databaseMapper::databaseAccessToDatabaseAccessDto)
                     .collect(Collectors.toList()));
             log.debug("found {} database accesses", accesses.size());
         }
+        final HttpHeaders headers = new HttpHeaders();
         if (principal != null) {
-            /* extra effort only when logged-in */
+            /* extra effort only when having access */
             final ExchangeDto exchange = messageQueueService.findExchange(rabbitConfig.getExchangeName());
             dto.setExchangeType(exchange.getType());
+            final Authentication authentication = (Authentication) principal;
+            if (authentication.isAuthenticated() && authentication.getAuthorities().stream().anyMatch(a -> a.getAuthority().equals("admin"))) {
+                headers.set("X-Username", database.getContainer().getPrivilegedUsername());
+                headers.set("X-Password", database.getContainer().getPrivilegedPassword());
+                headers.set("Access-Control-Expose-Headers", "X-Username X-Password");
+            }
         }
-        log.trace("find database resulted in dto {}", dto);
-        return ResponseEntity.ok(dto);
+        return ResponseEntity.status(HttpStatus.OK)
+                .headers(headers)
+                .body(dto);
     }
 
 }
